[tool.poetry]
name = "backend-app"
version = "0.1.0"
description = ""
authors = ["OeTakeshsh2 <db0nqfg@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

fastapi = ">=0.135.1,<0.136.0"
uvicorn = { extras = ["standard"], version = ">=0.42.0,<0.43.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.48,<3.0.0" }
psycopg2-binary = ">=2.9.11,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }
email-validator = ">=2.3.0,<3.0.0"
bcrypt = "<4.0"
pydantic-settings = ">=2.13.1,<3.0.0"
python-multipart = ">=0.0.22,<0.0.23"
alembic = ">=1.18.4,<2.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
redis = ">=7.4.0,<8.0.0"
celery = ">=5.6.3,<6.0.0"
stripe = ">=15.0.1,<16.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
httpx = ">=0.28.1,<0.29.0"
aiosqlite = ">=0.22.1,<0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
